a1/brendan_gordon/TEST_PROGRAMS/invalidtype/shivan_sahib/float_mult_string.min
var x : float;
var y : string;
var j : string;

j  = x * y;

